# OpenAssetIO-Test-CMake

./: .gitmodules  CMakeLists.txt  README.md  RELEASE_NOTES.md
.github/: dependabot.yml
.github/build_openassetio/: action.yml
.github/build_openassetio_mediacreation/: action.yml
.github/workflows/: test.yml
src/: test.core.c  test.core.cpp  test.mediacreation.cpp  test.py  test.python.bridge.cpp
